public/content/@neonsan/v3.6.0/product_operation/01_ops_guide/fault_process/node.adoc
---
title: "清理节点记录"
weight: 5
---

## NeonSAN v3.6.0 及之后版本

对指定节点进行下线操作时，迁移完节点数据，需对相应的节点信息进行清除。详细操作如下。

. 执行如下命令，查看集群上是否有正在执行的异步任务。
+
[,shell]
----
neonsan list_job
----
+
include::../../../../../_components/note.adoc[]
重点关注当前节点上有无正在执行的 `evict_store` 任务。
include::../../../../../_components/table_footer.adoc[]

. 检查待下线节点 neonstore 服务状态，确保该服务已为 `stop`。
+
[,shell]
----
supervisorctl status neonstore
----

. 执行如下命令，移除相应节点记录。
+
--
[,shell]
----
curl "http://$(qfcip):2600/qfa?op=remove_store&store_id=41"
----
回显内容如下，则说明节点信息已移除。
[,shell]
----
{"op":"remove_store_reply","ret_code":0,"reason":"RemoveStore is done for store:41"}
----
--
+
include::../../../../../_components/note.adoc[]
`store_id` 为下线节点的 ID，需根据实际情况进行修改。
include::../../../../../_components/table_footer.adoc[]

. 若当前节点也为 Center 节点，则需将其从 Center 表中删除。
.. 登录数据库。
+
* QingStor MySQL 数据库
+
[,shell]
----
mysql -uqingstor -p'QS!ows%0923' -h neonsan-mysql0 -P 3306
----
* Galera 数据库
+
[,shell]
----
mysql -uneonsan -pzhu88jie
----

* Xenondb 数据库
+
[,shell]
----
mysql -uneonsan -pzhu88jie -hx.x.x.x   
----
+
include::../../../../../_components/note.adoc[]
``-h`` 需指定 Xenondb 数据库虚 IP
include::../../../../../_components/table_footer.adoc[]

.. 关闭自动提交。
+
[,sql]
----
mysql> use neonsan;
mysql> set autocommit=0;
----

.. 查看待清除节点是否保存于 Center 数据库表中。
+
[,sql]
----
select * from center;
----
+
include::../../../../../_components/note.adoc[]
若查询结果中，数据库表中有待清除节点信息，则进行后续操作。否则，退出数据库，结束操作即可。
include::../../../../../_components/table_footer.adoc[]

.. 将待清除的节点，从 Center 表中删除。
+
[,sql]
----
mysql> delete from center where mngt_ip="192.168.101.41"; 
----
+
include::../../../../../_components/note.adoc[]
mngt_ip 用于指定待下线节点的 IP。
include::../../../../../_components/table_footer.adoc[]

.. 确认以上操作正确后，提交改动。
+
[,sql]
----
mysql> commit;
----

.. 设置自动提交。
+
[,sql]
----
mysql> set autocommit=1;
----


## NeonSAN v3.6.0 之前版本

节点进行下线操作后，数据库集群与 Zookeeper 集群中关于该节点的记录需手动对其进行清理。操作步骤如下。

. 检查 Zookeeper 中对应节点的 id 是否存在。
+
[,shell]
----
/opt/zookeeper-3.4.13/bin/zkCli.sh
get /neonsan/cluster1/stores/41
----
+
include::../../../../../_components/note.adoc[]
* 根据实际情况，修改 zookeeper 服务的路径。
* cluster1 为 NeonSAN 集群名，需根据实际情况修改。
* 41 为下线节点 ID，需根据实际情况修改。
include::../../../../../_components/table_footer.adoc[]

. 若待下线节点 ID 仍存在于 Zookeeper 中，则删除该节点。
+
[,shell]
----
rmr /neonsan/cluster1/stores/41
----
+
include::../../../../../_components/note.adoc[]
根据实际情况，修改 NeonSAN 集群名与下线节点 ID。
include::../../../../../_components/table_footer.adoc[]

. 登录数据库，删除下线节点相关记录。
+
include::../../../../../_components/note.adoc[]
命令行中的存储节点 ID 和 IP 地址需根据实际情况进行修改。
include::../../../../../_components/table_footer.adoc[]
.. 登录数据库。
+
* QingStor MySQL 数据库
+
[,shell]
----
mysql -uqingstor -p'QS!ows%0923' -h neonsan-mysql0 -P 3306
----
* Galera 数据库
+
[,shell]
----
mysql -uneonsan -pzhu88jie
----

* Xenondb 数据库
+
[,shell]
----
mysql -uneonsan -pzhu88jie -hx.x.x.x   
----
+
include::../../../../../_components/note.adoc[]
``-h`` 需指定 Xenondb 数据库虚 IP
include::../../../../../_components/table_footer.adoc[]

.. 关闭自动提交。
+
[,sql]
----
mysql> use neonsan;
mysql> set autocommit=0;
----

.. 查看下线节点遗留信息。
+
[,sql]
----
mysql> select * from store where id=41;
mysql> select * from ssd where store_id=41;
mysql> select * from candidate_disk where store_id=41;
mysql> select * from port where store_id=41;
----
.. 删除下线节点遗留信息。
+
[,sql]
----
mysql> delete from candidate_disk where store_id=41;
mysql> delete from port where store_id=41;
mysql> delete from ssd where store_id=41;
mysql> delete from store where id=41;
----

.. 确认正确删除下线节点信息。
+
[,sql]
----
mysql> select * from store;
mysql> select * from ssd;
mysql> select * from candidate_disk;
mysql> select * from port;
mysql> select * from neonsan_version
----

.. 查看该节点是否保存于 center 表中。
+
[,sql]
----
mysql> select * from center;
----

.. 若该节点保存于 center 表中，则将其从 center 表中删除。
+
[,sql]
----
mysql> delete from center where mngt_ip="192.168.101.41"; 
----
+
include::../../../../../_components/note.adoc[]
192.168.101.41 为下线节点 IP，需根据实际情况进行修改。
include::../../../../../_components/table_footer.adoc[]

.. 查看该节点是否存在于 neonsan_version 表中。
+
[,sql]
----
mysql> select * from neonsan_version where mngt_ip like "store_192.168.101.41";
----

.. 若该节点存在于 neonsan_version 表中，则将其从该表中删除。
+
[,sql]
----
mysql> delete from neonsan_version where mngt_ip like "store_192.168.101.41";
----

.. 确认以上操作正确后，提交改动。
+
[,sql]
----
mysql> commit;
----

.. 设置自动提交。
+
[,sql]
----
mysql> set autocommit=1;
----

